force-app/main/default/objects/AI_Prompt_Blinkey_Flint__mdt/AI_Prompt_Blinkey_Flint__mdt.object-meta.xml
<CustomObject>
    <label>AI Prompt Blinkey/Flint</label>
    <pluralLabel>AI Prompt Blinkey/Flint</pluralLabel>
</CustomObject>