force-app/main/default/objects/AI_Prompt_Blinkey_Flint__mdt/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blakeney</fullName>
                <default>true</default>
                <label>Blakeney</label>
            </value>
            <value>
                <fullName>Flint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>